# dead_lock_detect

./: .gitignore  CMakeLists.txt  README.md
analyzer/: README.md  deadlock_analyze
analyzer/dl_analyzer/: __init__.py  __main__.py  cli.py  cycles.py  events.py  graph.py  report.py  symbolizer.py  trace_reader.py  types.py
docs/superpowers/specs/: 2026-05-09-ldpreload-perf-bench-design.md  2026-05-11-async-event-log-design.md  2026-05-12-async-event-log-bottlenecks.md
examples/: quick_test.sh  quick_test_fixed.sh  run_complete_demo.sh  run_deadlock_test.sh  run_full_demo.sh  simple_deadlock_demo.cpp  test_in_container.sh  test_ros_deadlock.sh
examples/ros_pubsub/: CMakeLists.txt  FINAL_SUMMARY.md  FIX_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md  TECHNICAL_ISSUES.md  package.xml
examples/ros_pubsub/src/: minimal_test.cpp  publisher.cpp  subscriber.cpp
scripts/: bench_report.py  run_bench_in_docker.sh
src/: analyzer_main.cpp  backend.cpp  backend.h  backtrace.cpp  backtrace.h  bypass.cpp  bypass.h  config.cpp  config.h  event_log.cpp  event_log.h  event_types.cpp  event_types.h  interpose_cond.cpp  interpose_mutex.cpp  interpose_rwlock.cpp  interpose_spin.cpp  lib_init.cpp  module_map.cpp  module_map.h  profile.h  real_symbols.cpp  real_symbols.h  ring_buffer.h  thread_state.cpp  thread_state.h
src/analyzer/: cycles.cpp  cycles.h  graph.cpp  graph.h  main.cpp  report.cpp  report.h  symbolizer.cpp  symbolizer.h  trace_reader.cpp  trace_reader.h  types.h
tests/: CMakeLists.txt  bench_backtrace.cpp  bench_prodcons.cpp  test_ab_ba.cpp  test_async_fork.cpp  test_async_pipeline.cpp  test_clean.cpp  test_cond_wait.cpp  test_destroy_reuse.cpp  test_fp_walk.cpp  test_recursive.cpp  test_ring_buffer.cpp  test_rwlock.cpp  test_rwlock_read_read.cpp  test_single_thread_inversion.cpp  test_std_mutex_ab_ba.cpp  test_std_scoped_lock.cpp  test_std_shared_mutex_read_read.cpp  test_std_unique_lock_ab_ba.cpp  test_three_cycle.cpp
