<?xml version="1.0"?>
<package format="2">
  <name>ros_pubsub</name>
  <version>0.1.0</version>
  <description>ROS C++ Publisher and Subscriber example for deadlock detection</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
